# Luxe_LuCaS

./: CMakeLists.txt  FindROOT.cmake  IPstrong_luxe_Feb2019_Enelas_0.01J_trident_particles_run_000001.out  IPstrong_luxe_Feb2019_Enelas_0.01J_trident_particles_run_000002.out  Makefile  README.md  VersionMigFix.txt  env_setup.sh  gui.mac  luxe_gamma_new.mac  lxbeamsim.cc  mc_list_out.txt
Trash/: HistoManager.hh  LCRootOut.ccold~
include/: .PrimaryGeneratorAction.hh.swp  ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GlobalVars.hh  Hit_t.hh  LCHit.hh  LCRootOut.hh  LCSensitiveDetector.hh  LinkDef.h  LuxeTestGenerator.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  PrimarySpectra.hh  Run.hh  RunAction.hh  Setup.hh  StepMax.hh  SteppingAction.hh  Track_t.hh
run/: .nfs0000000080c6aacf0000001b  PlotLCOut.C  QA.job  gui.mac  hist_settings.mac  init_vis.mac  luxe_e_gamma.mac  luxe_gamma_new.mac  mc_list_out.txt  run_condor.sh  run_local.sh  run_luxe.mac  run_main.sh  run_vis.mac
src/: .RunAction.cc.swp  ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction_LumiCal.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  LCHit.cc  LCRootOut.cc  LCSensitiveDetector.cc  LuxeTestGenerator.cc  PhysListEmStandard.cc  PhysListEmStandardGS.cc  PhysListEmStandardSSM.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  PrimarySpectra.cc  Run.cc  RunAction.cc  Setup.cc  StackingAction.cc  StepMax.cc  SteppingAction.cc  TrackingAction.cc  out.cc  out_rdict.pcm
